# envsec

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.rs  install.sh  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.sha/: config.json
cli/: Cargo.toml  Cross.toml  build.rs  justfile
cli/src/: main.rs
cli/src/cli/: devices.rs  get.rs  mod.rs  projects.rs  sync.rs
cli/src/clipboard/: mod.rs
cli/src/config/: mod.rs
cli/src/dotenv/: mod.rs
cli/src/output/: masked.rs  mod.rs
cli/src/session/: password.rs
cli/src/sync/: client.rs  messages.rs  mod.rs  room.rs
cli/src/vault/: crypto.rs
frontend/: angular.json  justfile  package.json  tsconfig.json  tsconfig.spec.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts  types.ts
frontend/src/app/pages/auth/: auth.component.ts
frontend/src/app/pages/dashboard/: dashboard.component.ts
frontend/src/app/pages/projects/: projects.component.ts
frontend/src/app/services/: api.service.ts  theme.service.ts
src/: main.rs
src/cli/: auth.rs  export.rs  import.rs  init.rs  list.rs  rm.rs  run.rs  set.rs  status.rs  update.rs
src/output/: colors.rs  table.rs
src/project/: mod.rs  resolver.rs
src/session/: mod.rs
src/vault/: mod.rs  store.rs  types.rs
workers/: justfile  package.json  tsconfig.json  wrangler.toml
workers/src/: index.ts  signaling-room.ts
