[package]
name = "envsec"
version = "0.1.0"
edition = "2021"
description = "Local-first encrypted secret manager"
license = "MIT"
homepage = "https://github.com/shawal-mbalire/envsec"
repository = "https://github.com/shawal-mbalire/envsec"
readme = "README.md"
keywords = ["secrets", "env", "encryption", "cli", "vault"]
categories = ["command-line-utilities", "cryptography"]
rust-version = "1.70"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
clap = { version = "4", features = ["derive"] }
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
colored = "3"
tabled = "0.21"
dialoguer = "0.12"
toml = "0.8"
thiserror = "2"
ureq = "2"
